--- a/Marathon skills/Marathon skills/Marathon skills.csproj
+++ b/Marathon skills/Marathon skills/Marathon skills.csproj
@@ -50,11 +50,11 @@
     <Compile Include="Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Charitier.cs">
+    <Compile Include="Coordinator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Charitier.Designer.cs">
-      <DependentUpon>Charitier.cs</DependentUpon>
+    <Compile Include="Coordinator.Designer.cs">
+      <DependentUpon>Coordinator.cs</DependentUpon>
     </Compile>
     <Compile Include="charities.cs">
       <SubType>Form</SubType>
@@ -120,6 +120,12 @@
     <Compile Include="UserControl1.Designer.cs">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Admin.resx">
+      <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Coordinator.resx">
+      <DependentUpon>Coordinator.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="charities.resx">
       <DependentUpon>charities.cs</DependentUpon>
     </EmbeddedResource>
@@ -148,6 +154,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Runner.resx">
+      <DependentUpon>Runner.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sponsor.resx">
       <DependentUpon>Sponsor.cs</DependentUpon>
     </EmbeddedResource>
