--- a/Marathon skills/Marathon skills/Marathon skills.csproj
+++ b/Marathon skills/Marathon skills/Marathon skills.csproj
@@ -91,14 +91,17 @@
     <Compile Include="informwin.Designer.cs">
       <DependentUpon>informwin.cs</DependentUpon>
     </Compile>
-    <Compile Include="iwannaberunner.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="login.Designer.cs">
       <DependentUpon>login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="newrunner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="newrunner.Designer.cs">
+      <DependentUpon>newrunner.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -147,11 +150,11 @@
     <EmbeddedResource Include="informwin.resx">
       <DependentUpon>informwin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="iwannaberunner.resx">
-      <DependentUpon>iwannaberunner.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="login.resx">
       <DependentUpon>login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="newrunner.resx">
+      <DependentUpon>newrunner.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
