--- a/Marathon skills/Marathon skills/Marathon skills.csproj
+++ b/Marathon skills/Marathon skills/Marathon skills.csproj
@@ -105,6 +105,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="registrationnewrunner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="registrationnewrunner.Designer.cs">
+      <DependentUpon>registrationnewrunner.cs</DependentUpon>
+    </Compile>
     <Compile Include="Runner.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="registrationnewrunner.resx">
+      <DependentUpon>registrationnewrunner.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Runner.resx">
       <DependentUpon>Runner.cs</DependentUpon>
     </EmbeddedResource>
