--- a/Marathon skills/Marathon skills/Marathon skills.csproj
+++ b/Marathon skills/Marathon skills/Marathon skills.csproj
@@ -115,6 +115,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="registration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="registration.Designer.cs">
+      <DependentUpon>registration.cs</DependentUpon>
+    </Compile>
     <Compile Include="registrationnewrunner.cs">
       <SubType>Form</SubType>
     </Compile>
