--- a/Marathon skills/Marathon skills/Marathon skills.csproj
+++ b/Marathon skills/Marathon skills/Marathon skills.csproj
@@ -89,6 +89,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>gr464_DmitrievDataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="gr464_DmitrievDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>gr464_DmitrievDataSet3.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Information_redcross.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -188,6 +193,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="registration.resx">
+      <DependentUpon>registration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="registrationnewrunner.resx">
       <DependentUpon>registrationnewrunner.cs</DependentUpon>
     </EmbeddedResource>
@@ -235,6 +243,17 @@
     </None>
     <None Include="gr464_DmitrievDataSet2.xss">
       <DependentUpon>gr464_DmitrievDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="gr464_DmitrievDataSet3.xsc">
+      <DependentUpon>gr464_DmitrievDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="gr464_DmitrievDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>gr464_DmitrievDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="gr464_DmitrievDataSet3.xss">
+      <DependentUpon>gr464_DmitrievDataSet3.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
